// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EthVaultFactory EthErc20Vault private vault deployment with own escrow gas 1`] = `
Object {
  "calldataByteLength": 516,
  "gasUsed": 577199,
}
`;

exports[`EthVaultFactory EthErc20Vault private vault deployment with shared escrow gas 1`] = `
Object {
  "calldataByteLength": 516,
  "gasUsed": 428380,
}
`;

exports[`EthVaultFactory EthErc20Vault public vault deployment with own escrow gas 1`] = `
Object {
  "calldataByteLength": 516,
  "gasUsed": 553279,
}
`;

exports[`EthVaultFactory EthErc20Vault public vault deployment with shared escrow gas 1`] = `
Object {
  "calldataByteLength": 516,
  "gasUsed": 404460,
}
`;

exports[`EthVaultFactory EthVault private vault deployment with own escrow gas 1`] = `
Object {
  "calldataByteLength": 324,
  "gasUsed": 503077,
}
`;

exports[`EthVaultFactory EthVault private vault deployment with shared escrow gas 1`] = `
Object {
  "calldataByteLength": 324,
  "gasUsed": 354258,
}
`;

exports[`EthVaultFactory EthVault public vault deployment with own escrow gas 1`] = `
Object {
  "calldataByteLength": 324,
  "gasUsed": 479157,
}
`;

exports[`EthVaultFactory EthVault public vault deployment with shared escrow gas 1`] = `
Object {
  "calldataByteLength": 324,
  "gasUsed": 330338,
}
`;
